--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,55 @@
+/* Font-family */
+/* Margins & Paddings */
+/* Colors */
+* {
+  list-style-type: none;
+  text-decoration: none;
+}
 
+body {
+  margin: 0;
+  font-family: OpenSans-Regular;
+  font-size: 14px;
+  color: #070439;
+}
+
+@font-face {
+  font-family: OpenSans-Regular;
+  src: url(../../fonts/OpenSans-Regular.ttf);
+}
+@font-face {
+  font-family: OpenSans-Bold;
+  src: url(../../fonts/OpenSans-Bold.ttf);
+}
+@font-face {
+  font-family: Raleway-Regular;
+  src: url(../../fonts/Raleway-Regular.ttf);
+}
+@font-face {
+  font-family: Raleway-Bold;
+  src: url(../../fonts/Raleway-Bold.ttf);
+}
+/* Header */
+header {
+  margin: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header #logo img {
+  width: 80px;
+}
+
+nav ul {
+  display: flex;
+  font-family: Raleway-Regular;
+  font-size: 0.75rem;
+  margin: 0;
+  padding: 0;
+}
+nav ul li {
+  margin-left: 25px;
+  cursor: pointer;
+}
 
 /*# sourceMappingURL=style.css.map */
