--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,10 @@
 
 @import "./base/typography.scss";
 
+@import "./components/input.scss";
+
+@import "./components/button.scss";
+
 @import "./layouts/header.scss";
 
 @import "./layouts/footer.scss";
