--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -1,3 +1,7 @@
+html {
+	font-size: 62.5%;
+}
+
 * {
     list-style-type: none;
     text-decoration: none;
@@ -6,6 +10,6 @@
 body {
     margin: 0;
     font-family: $p-font;
-    font-size: 14px;
+    font-size: 1.4rem;
     color: $main-color;
 }
