--- a/sass/components/input.scss
+++ b/sass/components/input.scss
@@ -2,11 +2,12 @@
 .register__input {
     display: flex;
     flex-direction: column;
+    width: 100%;
     & input {
         border: 1px $main-color solid;
         border-radius: $border-radius;
         padding-left: 20px;
-        margin: 19px 0 16px 0;
+        margin: 19px 0 16px;
         height: map-get($map: $input-height, $key: mobile);
         font-size: 1.2rem;
         &::placeholder {
@@ -19,7 +20,7 @@
             & ~span {
                 display: flex; /* Show the error message */
                 color: $error-clr;
-                font-size: 1rem;
+                font-size: $register-input;
                 margin-bottom: 10px; /* Create a margin-bottom between the error message and the button */
             }
             
@@ -27,5 +28,27 @@
     }
     & span {
         display: none; /* Hide the error message */
+    }
+}
+
+/* Input : Presention */
+#presentation__text__register__input {
+    margin-left: 2px; /* Small shift with the button */
+}
+
+/* Input : Register */
+#register__input {
+    margin: 0 25px;
+    & input {
+        border: none;
+        padding-left: 10px;
+        box-shadow: 2px 2px 5px $register-shadow;
+        border-radius: 2px;
+        font-size: $register-input;
+        &:not(:focus):invalid {
+            & ~span {
+                color: #FFF;
+            }
+        }
     }
 }
