--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -7,9 +7,10 @@ $input-font: Raleway-Regular;
 $btn-font: Raleway-Bold;
 
 /* Font-size */
+$register-input: 1rem;
 
 /* Margins & Paddings */
-$margin-phone: (body: 25px, presentation: 35px);
+$margin-phone: (body: 25px, presentation: 35px, footer: 45px);
 
 /* Colors */
 $main-color: hsl(243, 87%, 12%);
@@ -20,6 +21,8 @@ $btn-background: hsl(224, 93%, 58%);
 $btn-background-hover: #6B9BFF;
 $link-clr: hsl(170, 45%, 43%);
 $link-clr-hover: hsl(169, 74%, 54%);
+$register-bg: hsl(238, 22%, 44%);
+$register-shadow: hsl(240, 18%, 41%);
 
 /* Border-radius */
 $border-radius: 3px;
