--- a/sass/components/input.scss
+++ b/sass/components/input.scss
@@ -42,9 +42,11 @@
     & input {
         border: none;
         padding-left: 10px;
+        margin-bottom: 8px;
         box-shadow: 2px 2px 5px $register-shadow;
         border-radius: 2px;
         font-size: $register-input;
+        height: 30px;
         &:not(:focus):invalid {
             & ~span {
                 color: #FFF;
