Adaptation de l'entièreté de la page pour la version small devices

--- a/sass/components/button.scss
+++ b/sass/components/button.scss
@@ -15,7 +15,7 @@
 }
 
 /* Button : Register */
-#register__input {
+#register__block__input {
     & button {
         box-shadow: 2px 2px 5px $register-shadow;
         font-size: $register-input;
