--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -31,3 +31,6 @@ $border-radius: 3px;
 $input-height: (mobile: 36px, desktop: 60px);
 $btn-height: (mobile: 40px);
 $p-height: (mobile: 2rem);
+
+/* Width */
+$sm-devices-max-width: 550px;
