--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
 /* Colors */
 /* Border-radius */
 /* Height */
+/* Width */
 html {
   font-size: 62.5%;
 }
@@ -39,17 +40,12 @@ body {
 }
 /* Input */
 .register__input {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 .register__input input {
-  border: 1px #070439 solid;
-  border-radius: 3px;
-  padding-left: 20px;
   margin: 19px 0 16px;
-  height: 36px;
-  font-size: 1.2rem;
 }
 .register__input input::placeholder {
   color: #bfbfbf;
@@ -78,12 +74,19 @@ body {
   margin-left: 2px;
   /* Small shift with the button */
 }
+#presentation__text__register__input input {
+  border: 1px #070439 solid;
+  border-radius: 3px;
+  padding-left: 20px;
+  height: 36px;
+  font-size: 1.2rem;
+}
 
 /* Input : Register */
-#register__input {
+#register__block__input {
   margin: 0 25px;
 }
-#register__input input {
+#register__block__input input {
   border: none;
   padding-left: 10px;
   margin-bottom: 8px;
@@ -92,7 +95,7 @@ body {
   font-size: 1rem;
   height: 30px;
 }
-#register__input input:not(:focus):invalid ~ span {
+#register__block__input input:not(:focus):invalid ~ span {
   color: #FFF;
 }
 
@@ -113,7 +116,7 @@ body {
 }
 
 /* Button : Register */
-#register__input button {
+#register__block__input button {
   box-shadow: 2px 2px 5px #56567b;
   font-size: 1rem;
   padding: 10px 20px;
@@ -134,6 +137,7 @@ header #logo img {
 
 nav ul {
   display: flex;
+  flex-wrap: wrap;
   font-family: Raleway-Regular;
   font-size: 1.2rem;
   margin: 0;
@@ -205,12 +209,25 @@ footer .attribution {
 /* Section 1 : Présentation */
 #presentation {
   margin: 90px 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #presentation__image img {
   width: 100%;
 }
+@media (min-width: 577px) and (max-width: 767px) {
+  #presentation__image img {
+    max-width: 550px;
+  }
+}
 #presentation__text {
   text-align: center;
+}
+@media (min-width: 577px) and (max-width: 767px) {
+  #presentation__text {
+    max-width: 550px;
+  }
 }
 #presentation__text h1 {
   font-family: OpenSans-Bold;
@@ -233,22 +250,35 @@ footer .attribution {
   /* width height */
   background-position-x: center;
   padding: 93px 25px 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 #description__image img {
   width: 100%;
 }
-#description__text h2 {
+@media (min-width: 577px) and (max-width: 767px) {
+  #description__image img {
+    max-width: 550px;
+  }
+}
+@media (min-width: 577px) and (max-width: 767px) {
+  #description__block {
+    max-width: 550px;
+  }
+}
+#description__block__text h2 {
   font-family: Raleway-Bold;
   font-size: 1.5rem;
   margin: 85px 0 27px;
   text-align: center;
 }
-#description__text .text {
+#description__block__text .text {
   color: #585989;
   line-height: 2rem;
   margin-bottom: 18px;
 }
-#description__text__link {
+#description__block__text__link {
   display: flex;
   align-items: flex-end;
   border-bottom: 1px #3c9f8f solid;
@@ -262,52 +292,52 @@ footer .attribution {
   color: #3c9f8f;
   cursor: pointer;
 }
-#description__text__link:hover {
+#description__block__text__link:hover {
   color: #33e1c1;
   border-bottom: 1px #33e1c1 solid;
 }
-#description__text__link p {
+#description__block__text__link p {
   margin: 0 10px 0 0;
   font-size: 1.2rem;
 }
-#description__text__link__arrow {
+#description__block__text__link__arrow {
   width: 16px;
   height: auto;
 }
-#description__review {
+#description__block__review {
   padding: 20px 24px 22px;
   margin: 40px 22px 0;
   background-color: #fff;
   border-radius: 3px;
   box-shadow: 0 0 20px #bfbfbf;
 }
-#description__review__quotes {
+#description__block__review__quotes {
   width: 14px;
   height: auto;
 }
-#description__review__text {
+#description__block__review__text {
   font-size: 1.05rem;
   margin-top: 2px;
   line-height: 1.8rem;
 }
-#description__review__person {
+#description__block__review__person {
   display: flex;
   align-items: center;
 }
-#description__review__person img {
+#description__block__review__person img {
   width: 25px;
   border-radius: 25px;
   float: left;
 }
-#description__review__person__infos {
+#description__block__review__person__infos {
   margin-left: 10px;
 }
-#description__review__person__infos #name {
+#description__block__review__person__infos #name {
   margin: 0 0 2px;
   font-family: Raleway-Bold;
   font-size: 1rem;
 }
-#description__review__person__infos #profession {
+#description__block__review__person__infos #profession {
   margin: 0;
   font-size: 0.7rem;
 }
@@ -316,15 +346,25 @@ footer .attribution {
 #register {
   background-color: #585989;
   color: #FFF;
-  text-align: center;
   padding: 54px 45px 70px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-#register__text h2 {
+@media (min-width: 577px) and (max-width: 767px) {
+  #register__block {
+    max-width: 550px;
+  }
+}
+#register__block__text {
+  text-align: center;
+}
+#register__block__text h2 {
   margin: 0;
   font-family: Raleway-Bold;
   font-size: 1.8rem;
 }
-#register__text p {
+#register__block__text p {
   line-height: 2rem;
   margin: 20px 0 7px;
 }
