--- a/sass/layouts/header.scss
+++ b/sass/layouts/header.scss
@@ -14,6 +14,7 @@ header {
 nav {
     & ul {
         display: flex;
+        flex-wrap: wrap;
         font-family: $nav-font;
         font-size: 1.2rem;
         margin: 0;
