--- a/sass/pages/presentation.scss
+++ b/sass/pages/presentation.scss
@@ -1,13 +1,22 @@
 /* Section 1 : Présentation */
 #presentation {
     margin: 90px map-get($map: $margin-phone, $key: presentation);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     &__image {
         & img {
             width: 100%;
+            @include small-devices {
+                max-width: $sm-devices-max-width;
+            }
         }
     }
     &__text {
         text-align: center;
+        @include small-devices {
+            max-width: $sm-devices-max-width;
+        }
         & h1 {
             font-family: map-get($map: $h1-font, $key: phone);
             font-size: 2.3rem;
