--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -12,4 +12,7 @@ body {
     font-family: $p-font;
     font-size: 1.4rem;
     color: $main-color;
+    @include tablets {
+        font-size: 1.6rem;
+    }
 }
