--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -4,9 +4,25 @@ footer {
     color: #fff;
     padding: 65px map-get($map: $margin-phone, $key: footer) 30px;
     font-size: 1.5rem;
+    @include tablets {
+        padding: 91px map-get($map: $margin-tablet, $key: footer) 42px;
+        font-size: 1.75rem;
+    }
+    & #footer-logo {
+        width: 166px;
+    }
+    &>div {
+        margin-top: 37px;
+        @include  tablets {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin-top: 20px;
+        }
+    }
     & #contact {
         &__phone {
-            margin: 37px 0 20px 0;
+            margin-bottom: 20px;
         }
         &__email {
             margin-bottom: 60px;
@@ -40,6 +56,9 @@ footer {
             height: 25px;
             margin: 5px;
             text-align: center;
+            @include tablets {
+                margin-top: 25px;
+            }
             &:hover {
                 color: $btn-background-hover;
                 border: 1px $btn-background-hover solid;
@@ -55,5 +74,8 @@ footer {
         font-size: 1rem;
         text-align: center;
         margin-top: 30px;
+        @include tablets {
+            font-size: 1.16rem;
+        }
     }
 }    
